--- a/views/workout.ejs
+++ b/views/workout.ejs
@@ -12,28 +12,28 @@
         <% } %>
         <div class="row justify-content-md-center">
             <div class="col-8">
-                <form method="POST" action="/signup">
+                <form method="POST" action="/workout/create">
                     <img class="mb-4" src="images/anon.png" alt="" width="100" height="100">
                     <div class="form-group">
-                        <label for="exampleInputEmail1">Email address</label>
-                        <input name="email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                        <label for="exampleInputEmail1">Workout Name</label>
+                        <input name="workoutName" type="string" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
                         <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                     </div>
                     <div class="form-group">
-                        <label for="exampleInputEmail1">BMI</label>
-                        <input name="bmi" type="number" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter BMI">
+                        <label for="exampleInputEmail1">workoutActivityType</label>
+                        <input name="workoutActivityType" type="string" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter BMI">
                         <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                     </div>
                     <div class="form-group">
-                        <label for="exampleInputPassword1">Password</label>
-                        <input name="password" type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                        <label for="exampleInputPassword1">workoutMuscleGroup</label>
+                        <input name="workoutMuscleGroup" type="string" class="form-control" id="exampleInputPassword1" placeholder="Password">
                     </div>
                     <div class="form-group">
-                            <label for="exampleInputPassword1">Password, again</label>
-                            <input name="passwordConfirmation" type="password" class="form-control" id="exampleInputPassword2" placeholder="Password">
+                            <label for="exampleInputPassword1">workoutIntesity</label>
+                            <input name="workoutIntesity" type="string" class="form-control" id="exampleInputPassword2" placeholder="Password">
                     </div>
                     <button type="submit" class="btn btn-danger">Submit</button>
-                    <a href="/login">
+                    <a href="/">
                         <small id="emailHelp" class="form-text text-muted">Login</small>
                     </a>
                 </form>
